// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderCard tests Component should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  grid-area: header;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  grid-area: first;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  grid-area: second;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header header" "first second";
  grid-template-columns: 50% 50%;
  grid-row-gap: 0px;
  grid-column-gap: 0px;
  justify-items: stretch;
  grid-template-rows: auto auto;
}

.c15 {
  font-size: 14px;
  line-height: 20px;
  max-width: 336px;
}

.c1 {
  font-size: 10px;
  border-radius: 15px;
  box-shadow: 0px 10px 32px #0000001a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  position: relative;
  overflow: hidden;
  padding: 2em;
  line-height: 3em;
  word-break: break-word;
}

.c1 .providerCardColumn:last-child {
  border-right: none;
  margin-right: none;
}

.c10 {
  color: #0f1423;
  font-size: 1.4em;
  max-width: 30em;
  line-height: 20px;
  margin-top: 1em;
}

.c4 {
  width: 100%;
}

.c5 {
  color: #5996f7;
  background-color: #c7ddfd;
  border-radius: 0px 15px;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.5em 1em;
  position: absolute;
  right: 0;
  top: 0;
}

.c9 {
  font-weight: 600;
  color: #0f1423;
  font-size: 1.8em;
}

.c13 {
  border-bottom: #f5f5f5 1.5px solid;
  padding-bottom: 2em;
  margin-bottom: 2em;
  font-size: 1.4em;
}

.c13:last-child {
  border-bottom: none;
  padding-bottom: 0;
  margin-bottom: 0;
}

.c14 {
  font-weight: 600;
  color: #0f1423;
}

.c11 {
  margin-bottom: 1.5em;
  margin-top: 1.5em;
  line-height: 20px;
}

.c11 .title {
  font-weight: 800;
  color: #5996f7;
  font-size: 1.2em;
}

.c11 .number {
  color: #0f1423;
  font-size: 1.4em;
}

.c12 {
  font-size: 1.3em;
  line-height: 1.5em;
  color: #0f1423;
  opacity: 0.57;
}

.c6 {
  vertical-align: middle;
  margin-right: 5px;
}

.c7 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #ED985A;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

@media (min-width:800px) {
  .c1 .providerCardColumn {
    border-right: #f5f5f5 1.5px dashed;
    padding-right: 3em;
  }

  .c1 .providerCardColumn:last-child {
    padding-left: 3em;
  }
}

@media (max-width:800px) {
  .c1 {
    padding-bottom: 10em;
  }
}

@media (max-width:440px) {
  .c4 {
    margin-top: 40px;
  }
}

@media (max-width:800px) {
  .c13 {
    border-top: rgba(15,20,35,0.2) 1.4px dashed;
    padding-top: 1em;
    margin-top: 2em;
    border-bottom: none;
    padding-bottom: 0;
    margin-bottom: 0;
  }
}

@media (min-width:801px) {
  .c12 {
    margin-bottom: 1.5em;
  }
}

<div>
  <div
    class="c0 Card-hurxuz-0 c1 providerCard"
    role="provider"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c0 c4"
        >
          <span
            class="c5"
            role="note"
          >
            <img
              alt="video icon"
              class="c6"
              src="ic_video.svg"
            />
            Atende Online
          </span>
        </div>
        <p
          class="c7"
          color="#ED985A"
        >
          Fisioterapia
        </p>
      </div>
      <div
        class="c8 providerCardColumn"
      >
        <p
          class="c9"
        >
          Thaís Amorim
        </p>
        <p
          class="c10"
        >
          Traumato-ortopedia
        </p>
        <div
          class="c11"
        >
          <p
            class="title"
          >
            REGISTRO
          </p>
          <p
            class="number"
          >
            Crefito4 202323
          </p>
        </div>
        <p
          class="c12"
        >
          Fisioterapeuta - Traumato Ortopedia
        </p>
        <div
          class="c13"
        >
          <p
            class="c14"
          >
            <img
              alt="address icon"
              class="c6"
              src="ic_pin.svg"
            />
            
            Minas Gerais (MG)
          </p>
          <p
            class="c15"
          >
            R. Bernardo Cupertino, 423 - B. Martins
          </p>
        </div>
      </div>
      <div
        class="c16 providerCardColumn"
      >
        <div
          class="c13"
        >
          <p
            class="c14"
          >
            Contato
          </p>
          <p>
            <img
              alt="phone icon"
              class="c6"
              src="ic_phone.svg"
            />
            <span>
               
              34 999624855
            </span>
          </p>
          <p
            class="c15"
          >
            <img
              alt="e-mail icon"
              class="c6"
              src="ic_mail.svg"
            />
            <span>
               
              thais_amorim773@hotmail.com
            </span>
          </p>
        </div>
        <div
          class="c13"
        >
          <p
            class="c14"
          >
            Atendimento online
          </p>
          <p>
            <img
              alt="video icon"
              class="c6"
              src="ic_video.svg"
            />
            <span>
              Zoom
            </span>
          </p>
        </div>
        <div
          class="c13"
        >
          <p
            class="c14"
          >
            Planos de saúde
          </p>
          <p>
            <img
              alt="card icon"
              class="c6"
              src="ic_card.svg"
            />
            <span>
              Sul América, IPSM, Saúde Caixa, Cassi, Amil e Vitalis
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProviderCard tests when mobile Component should render correctly 1`] = `
.c23 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #5A8DED;
  stroke: #5A8DED;
}

.c23 g {
  fill: inherit;
  stroke: inherit;
}

.c23 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c23 *[stroke*="#"],
.c23 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c23 *[fill-rule],
.c23 *[FILL-RULE],
.c23 *[fill*="#"],
.c23 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  grid-area: header;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  grid-area: first;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c18 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c18:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c16 {
  max-height: 0;
  visibility: hidden;
  overflow: hidden;
}

.c22 {
  font-size: 14px;
  line-height: 20px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header" "first" "second";
  grid-template-columns: auto;
  grid-row-gap: 0px;
  grid-column-gap: 0px;
  justify-items: stretch;
  grid-template-rows: auto auto auto;
}

.c15 {
  font-size: 14px;
  line-height: 20px;
  max-width: 336px;
}

.c1 {
  font-size: 10px;
  border-radius: 15px;
  box-shadow: 0px 10px 32px #0000001a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  position: relative;
  overflow: hidden;
  padding: 2em;
  line-height: 3em;
  word-break: break-word;
}

.c1 .providerCardColumn:last-child {
  border-right: none;
  margin-right: none;
}

.c10 {
  color: #0f1423;
  font-size: 1.4em;
  max-width: 30em;
  line-height: 20px;
  margin-top: 1em;
}

.c4 {
  width: 100%;
}

.c5 {
  color: #5996f7;
  background-color: #c7ddfd;
  border-radius: 0px 15px;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.5em 1em;
  position: absolute;
  right: 0;
  top: 0;
}

.c9 {
  font-weight: 600;
  color: #0f1423;
  font-size: 1.8em;
}

.c13 {
  border-bottom: #f5f5f5 1.5px solid;
  padding-bottom: 2em;
  margin-bottom: 2em;
  font-size: 1.4em;
}

.c13:last-child {
  border-bottom: none;
  padding-bottom: 0;
  margin-bottom: 0;
}

.c14 {
  font-weight: 600;
  color: #0f1423;
}

.c11 {
  margin-bottom: 1.5em;
  margin-top: 1.5em;
  line-height: 20px;
}

.c11 .title {
  font-weight: 800;
  color: #5996f7;
  font-size: 1.2em;
}

.c11 .number {
  color: #0f1423;
  font-size: 1.4em;
}

.c12 {
  font-size: 1.3em;
  line-height: 1.5em;
  color: #0f1423;
  opacity: 0.57;
}

.c6 {
  vertical-align: middle;
  margin-right: 5px;
}

.c7 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #ED985A;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

.c19 {
  font-size: 1.4rem;
  font-weight: 600;
}

.c20 {
  padding: 14px 30px;
}

.c21 {
  background-color: #C7DDFD;
  color: #5A8DED;
  width: 100%;
  height: 100%;
  padding: 20px 0 20px 0;
}

.c21 svg {
  vertical-align: middle;
}

.c17 {
  width: 100%;
  background-color: #C7DDFD;
  position: absolute;
  bottom: 0;
  left: 0;
  text-align: center;
}

@media (min-width:800px) {
  .c1 .providerCardColumn {
    border-right: #f5f5f5 1.5px dashed;
    padding-right: 3em;
  }

  .c1 .providerCardColumn:last-child {
    padding-left: 3em;
  }
}

@media (max-width:800px) {
  .c1 {
    padding-bottom: 10em;
  }
}

@media (max-width:440px) {
  .c4 {
    margin-top: 40px;
  }
}

@media (max-width:800px) {
  .c13 {
    border-top: rgba(15,20,35,0.2) 1.4px dashed;
    padding-top: 1em;
    margin-top: 2em;
    border-bottom: none;
    padding-bottom: 0;
    margin-bottom: 0;
  }
}

@media (min-width:801px) {
  .c12 {
    margin-bottom: 1.5em;
  }
}

<div>
  <div
    class="c0 Card-hurxuz-0 c1 providerCard"
    role="provider"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c0 c4"
        >
          <span
            class="c5"
            role="note"
          >
            <img
              alt="video icon"
              class="c6"
              src="ic_video.svg"
            />
            Atende Online
          </span>
        </div>
        <p
          class="c7"
          color="#ED985A"
        >
          Fisioterapia
        </p>
      </div>
      <div
        class="c8 providerCardColumn"
      >
        <p
          class="c9"
        >
          Thaís Amorim
        </p>
        <p
          class="c10"
        >
          Traumato-ortopedia
        </p>
        <div
          class="c11"
        >
          <p
            class="title"
          >
            REGISTRO
          </p>
          <p
            class="number"
          >
            Crefito4 202323
          </p>
        </div>
        <p
          class="c12"
        >
          Fisioterapeuta - Traumato Ortopedia
        </p>
        <div
          class="c13"
        >
          <p
            class="c14"
          >
            <img
              alt="address icon"
              class="c6"
              src="ic_pin.svg"
            />
            
            Minas Gerais (MG)
          </p>
          <p
            class="c15"
          >
            R. Bernardo Cupertino, 423 - B. Martins
          </p>
        </div>
        <div
          class="c13"
        >
          <p
            class="c14"
          >
            Contato
          </p>
          <p>
            <img
              alt="phone icon"
              class="c6"
              src="ic_phone.svg"
            />
            <span>
               
              34 999624855
            </span>
          </p>
          <p
            class="c15"
          >
            <img
              alt="e-mail icon"
              class="c6"
              src="ic_mail.svg"
            />
            <span>
               
              thais_amorim773@hotmail.com
            </span>
          </p>
        </div>
        <div
          aria-hidden="true"
          class="c0 c16"
        >
          <div
            class="c13"
          >
            <p
              class="c14"
            >
              Atendimento online
            </p>
            <p>
              <img
                alt="video icon"
                class="c6"
                src="ic_video.svg"
              />
              <span>
                Zoom
              </span>
            </p>
          </div>
          <div
            class="c13"
          >
            <p
              class="c14"
            >
              Planos de saúde
            </p>
            <p>
              <img
                alt="card icon"
                class="c6"
                src="ic_card.svg"
              />
              <span>
                Sul América, IPSM, Saúde Caixa, Cassi, Amil e Vitalis
              </span>
            </p>
          </div>
        </div>
        <h2
          class="c17"
        >
          <button
            class="c18 c19 c20 c21"
            type="button"
          >
            <span
              class="c22"
            >
              Saiba Mais
              <svg
                aria-label="FormDown"
                class="c23"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
    </div>
  </div>
</div>
`;
